Fix YAML syntax error in _config.yml
- Added missing closing quote for YouTube URL
- Fixes GitHub Pages build error: 'found unexpected end of stream while scanning a quoted scalar'

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://secfathy.github.io"
 author:
   name: "محمد فتحي"
   email: "mohammed@example.com"
-  youtube: "https://www.youtube.com/@MohammedFathy
+  youtube: "https://www.youtube.com/@MohammedFathy"
 
 # Build settings
 markdown: kramdown
