--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "محمد فتحي"
 description: "موقع محمد فتحي الشخصي"
 baseurl: ""
-url: "https://secfathy.github.io"
+url: "https://hacker0x01.github.io"
 
 # Author information
 author:
